updated the frontend and the backend code

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "build": "npm run start --prefix backend"
+    "start": "npm run start --prefix backend"
   },
   "author": "",
   "license": "ISC",
